--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,17 @@ body{
     background: #282425;
 }
 
+
+/* Home */
+
+.time_publish{
+    margin-top: -5px !important
+}
+
+
+
+
+
 main{
     background: linear-gradient(to top, #242526, rgba(36,37,38,.9), rgba(36,37,38,.7), rgba(36,37,38,.4), rgba(36,37,38,0));
 
@@ -17,12 +28,25 @@ main{
 
 }
 
+.bg-sub{
+    background: #292b2c;
+}
 .cover{
-    padding-top: 28%;
+    padding-top: 33%;
 }
 
 .inner_chat{
     height:450px;
     width: 303px;
     right: 20px;
+}
+
+#photo_profile{
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -25px;
+}
+
+.content{
+    background: #202224;
 }
